Fix the position of the pictures in xlsx documents

o anchor pictures to cell
o end-cell-address, end-x, end-y support
o so far don't anchor pictures in groups
o fix addressing of the cells (row 0, column 0 is A1)
o don't forget to initialize drawingml
  it's done in XlsxXmlWorksheetReader, but we
  include the MsooXmlCommonReaderDrawingMLImpl.h
  also in XlsxXmlDrawingReader

BUG:283068

Some other test files with improvements:
http://4spreadsheets.pbworks.com/f/SampleSpreadsheet&+Graph.xlsx
http://amorossquash.es/app/download/3836722002/Horarios+web.xlsx
http://assets.ngin.com/attachments/document/0009/7160/2010_Girls_Roster.xlsx
http://cdn.livediverse.eu/wp-content/uploads/2009/09/Review-of-EVI-data-4-case-study-areas-by-WP5.xlsx
http://cfmotori.com/public/15839141_Copia_di_96196503_250ST-9E_parts_purchase_manual10.xlsx
http://elibrary-data.imf.org/Contents/FindConceptsforCodes.xlsx
http://files1.guildlaunch.net/guild/library/169389/Heirloom Items Listing.xlsx
http://recruit-match.ncsasports.org/fasttrackfiles/clientFiles/616808_1297468255116_Mountain_View_s_Schedule.xlsx
http://www2.waterforduhs.k12.wi.us/staffweb/Kohn/Career Portfolio/Career Portfolio Program.xlsx
http://www.itatennis.com/Assets/Campus-Showdowns.xlsx
http://www.lee.edu/atd/IE_Goals Traffic Lights.xlsx
http://www.webmetricsguru.com/wp-content/uploads/2010/02/Geolocation-SMWNYC10.xlsx

Tested with cstester